# landmark

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  localize.txt  sample_data.txt  slam.txt  slamgraph.py  slamparse.py
atomic_configure/: local_setup.sh  setup.sh
catkin_generated/: generate_cached_setup.py  setup_cached.sh
devel/: .catkin  .rosinstall  _setup_util.py
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googletest/: CTestTestfile.cmake  Makefile
src/: eigen_tutorial.cc  torch_test.cc
src/localize/: localize.cc  localize.h  localize_main.cc
src/localize_fkd/: arnav_model_trace.pt  arnav_model_trace_bigger.pt  chimp_model_pickle_vesc_trace.pt  chimp_model_tf_256_50000.pt  chimp_model_tf_256_50000_trace.pt  chimp_model_trace.pt  localize_fkd.cc  localize_fkd.h  localize_fkd_main.cc  model_test.cc  model_wrapper.cc  model_wrapper.h  sheep_model_trace.pt  traced_iros_large.pt
src/mapping/: mapping.cc  mapping.h  mapping_main.cc
src/navigation/: navigation.cc  navigation.h  navigation_main.cc
src/pitch_test/: pitch_test.cc  pitch_test.h  pitch_test_main.cc
src/shared/: Makefile  cmake_install.cmake
src/slam/: landmark_extractor.h  landmark_slam.cc  localize.cc  localize.h  localize_main.cc  localize_offline.cc  mapping.cc  mapping.h
